// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generated files are committed if commitGenerated is true 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/my.txt
"
`;

exports[`generated files are committed if commitGenerated is undefined 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/my.txt
"
`;

exports[`generated files are ignored from git if commitGenerated is false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
/my.txt
"
`;

exports[`specified gitIgnore patterns are ignored (via gitIgnoreOptions) 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.jsii
foo/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
"
`;
